# cc-pyproject

./: .gitignore  LICENSE  Makefile  README.md  cookiecutter.json  pyproject.toml  requirements-dev.txt  requirements.txt
scripts/: makefile_help.py
tests/: __init__.py  conftest.py
